   doc/geany.html:
   Add hidden pref 'find_selection_type' with option to repeat last
   search when there's no selection.
   Change default Find Selection behaviour to not let the X selection
   override the current word (can be confusing).
   Add docs for Find Selection commands.
 * src/document.c:
   Fix segfault on idle callback when quitting.


2010-09-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c, doc/Makefile.am, doc/stash-example.c,
   doc/stash-gui-example.c:
   Improve Stash GUI example.


2010-09-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Move Go to Marker menu items to Search menu.
   Rename popup editor menu item Commands -> Edit.
 * src/callbacks.c, src/search.c, src/search.h:
   Move find_again() to search.c.
 * src/search.c:
   Make Find Selected commands repeat the last search if the selection
   was lost.
 * doc/geany.txt, doc/geany.html:
   Add docs for Find Selection keybindings.
 * src/interface.c, src/keybindings.c, geany.glade:
   Unify Find Selection strings.
 * src/interface.c, src/ui_utils.c, geany.glade:
   Group editor popup Insert commands in a submenu, with extra items
   for the most commonly used Insert Comments commands.
   Show Edit->Commands before Format in menubar Edit menu (to match
   keybindings order).
   Show Open Selected F_ile popup item below submenus.


2010-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c:
   Refactor shared submenu code with GeanySharedMenu array.
 * src/interface.c, src/ui_utils.c, geany.glade:
   Add Search submenu for Find Selected, Find Usage, Go to Tag items,
   shared with the editor popup menu.
 * src/document.c:
   Open a new document automatically after closing all documents.


2010-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/callbacks.c:
   Prompt for reloading if the document has an undo stack to avoid